--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,37 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@import url('https://fonts.googleapis.com/css2?family=Sora:wght@100;200;300;400;500;600;700;800&display=swap');
+
+html {
+  box-sizing: border-box;
+  height: 100%;
+  width: 100%;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+  font-family: 'Sora' !important;
+}
+
+#root {
+  min-height: 100vh;
+  background: linear-gradient(180deg, #FFFECB 0%, #FEA82F 100%) !important;
+  overflow: auto;
+}
+
 body {
+  overflow-x: hidden;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
+  min-height: 100vh;
+  width: 100vw;
+  background: linear-gradient(180deg, #FFFECB 0%, #FEA82F 100%) !important;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  font-family: 'Sora', BlinkMacSystemFont, 'Segoe UI', 'Roboto',
     'Oxygen','Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 
     'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
@@ -10,4 +41,19 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.MuiBox-root .css-19aqf2b {
+  flex-wrap: wrap;
+}
+
+input {
+  background: rgba(217, 216, 216, 0.111);
+  backdrop-filter: blur( 9px );
+  -webkit-backdrop-filter: blur( 9px );
+  border-radius: 10px;
+  border: 1px solid rgba( 255, 255, 255, 0.18 );
+  padding: .5em !important;
+  caret-color: var(--soft-yellow);
+  color: white !important;
 }
