--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 main {
-  background-color: rgba(245,245,220,0.3);
+  background-color: rgba(245, 245, 220, 0.3);
   border-radius: 10px;
-  border: 1px solid rgba( 212, 175, 55, .8 );
+  border: 1px solid rgba(212, 175, 55, .8);
   height: 80vh;
   margin: 2em 5em;
   padding: 2em;
@@ -9,7 +9,7 @@ main {
 }
 
 .page-header-container {
-  display:flex;
+  display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
@@ -21,22 +21,22 @@ main {
 }
 
 .page-option-menu {
-  display:flex;
+  display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: center;
 }
 
 section {
-  background-color: rgba(12,189,255,0.4);
+  background-color: rgba(12, 189, 255, 0.4);
   border-radius: 10px;
-  border: 1px solid rgba( 212, 175, 55, .8 );
+  border: 1px solid rgba(212, 175, 55, .8);
   padding: 2em;
   margin: 2em 0;
 }
 
 .section-header-container {
-  display:flex;
+  display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
@@ -48,8 +48,48 @@ section {
 }
 
 .section-option-menu {
-  display:flex;
+  display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: center;
+}
+
+.card-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: start;
+}
+
+.card-item-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: beige;
+  border: 1px solid rgba(212, 175, 55, .8);
+  padding: 1em;
+  margin: 1em;
+  max-width: 450px;
+  word-break: break-all;
+}
+
+#scrollbar::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  background-color: #F5F5F5;
+  border-radius: 10px;
+}
+
+#scrollbar::-webkit-scrollbar {
+  width: 10px;
+  background-color: #F5F5F5;
+}
+
+#scrollbar::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background-image: -webkit-gradient(linear,
+      left bottom,
+      left top,
+      color-stop(0.44, rgb(122, 153, 217)),
+      color-stop(0.72, rgb(73, 125, 189)),
+      color-stop(0.86, rgb(28, 58, 148)));
 }
