--- a/src/components/Posts/Posts.css
+++ b/src/components/Posts/Posts.css
@@ -3,12 +3,28 @@ header {
   align-items: center;
   justify-content: space-between;
   font-size: 1.75em;
+  background-color: rgba(12, 189, 255, 0.1);
+  border-radius: 10px;
+  border: 1px solid rgba(212, 175, 55, .8);
+  margin: 0.5em;
+  color: #FEA82F;
 }
 
 .posts-container {
   display: flex inline-block;
   align-items: center;
   justify-content: center;
+  /* border-width: 1px;
+  border-color: black; */
+  max-height: 200px;
+  overflow: scroll;
+  overflow-x: hidden;
+  padding: 15px;
+  margin: 1em;
+  background-color: rgba(251, 241, 222, .3);
+  border-radius: 30px;
+  border: 1px solid rgba(212, 175, 55, .8);
+  color: #FEA82F;
 }
 
 .post-item {
@@ -16,16 +32,46 @@ header {
   flex-direction: row;
   align-items: center;
   justify-content: center;
+  
 }
 
 .post-title {
   display: flex;
-  align-content: center;
+  align-content: start;
   justify-content: center;
+  font-size: large;
+  background-color: rgba(12, 189, 255, 0.1);
+  border-radius: 30px;
+  border: 1px solid rgba(212, 175, 55, .8);
+}
+
+.post-content {
+  border-width: 1px;
+  border-color: black;
+  padding: .5em;
+  background-color: rgba(251, 241, 222, .3);
+  border-radius: 30px;
+  border: 1px solid rgba(212, 175, 55, .8);
+}
+
+.post-replies {
+  display: flex;
+  flex-direction: column;
+  align-items: end;
+  justify-content: center;
+  margin: 0.5em;
 }
 
 .reply-item {
   display: flex;
-  align-content: flex-end;
-  justify-content: end;
+  flex-direction: column;
+  align-items: end;
+  justify-content: center;
+  margin: .5em 0;
+  background-color: rgba(251, 241, 222, .3);
+  border-radius: 30px;
+  border: 1px solid rgba(212, 175, 55, .8);
+  width: 40vw;
+  padding: 0 1em;
+  word-wrap: normal;
 }
