--- a/src/components/Posts/Posts.css
+++ b/src/components/Posts/Posts.css
@@ -7,7 +7,7 @@ header {
   border-radius: 10px;
   border: 1px solid rgba(212, 175, 55, .8);
   margin: 0.5em;
-  color: #FEA82F;
+  color: #e98b09;
 }
 
 .posts-container {
@@ -22,9 +22,9 @@ header {
   padding: 15px;
   margin: 1em;
   background-color: rgba(251, 241, 222, .3);
-  border-radius: 30px;
+  border-radius: 10px;
   border: 1px solid rgba(212, 175, 55, .8);
-  color: #FEA82F;
+  color: #c48329;
 }
 
 .post-item {
@@ -37,7 +37,7 @@ header {
 
 .post-title {
   display: flex;
-  align-content: start;
+  align-content: center;
   justify-content: center;
   font-size: large;
   background-color: rgba(12, 189, 255, 0.1);
@@ -46,6 +46,9 @@ header {
 }
 
 .post-content {
+  display: flex;
+  align-content: flex-start;
+  justify-content: space-between;
   border-width: 1px;
   border-color: black;
   padding: .5em;
